--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ div {
 
 
 <body>
-<h1 style="color: red;">SSB-276-CLASS-06-HW-04 </h1>	
+<h1 style="color: red;"> <marquee> SSB-276-CLASS-06-HW-04 </marquee></h1>	
 <h2 style="color: green;"> Class details</h2>
 <ul>
   <li>Display property</li>
